<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LoveSports</string>
    <string name="title_activity_pre_login">PreLoginActivity</string>
    <string name="title_activity_login_with_mobile">LoginWithMobileActivity</string>

    <string name="title_login_by_mobile">Login By Mobile</string>
    <string name="title_mobile_phone">Mobile Phone</string>
    <string name="title_login_password">Login Password</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>


    <string name="error_input_empty">Input cannot be empty</string>
    <string name="error_input_password">Password please begin with the letter, the length of the 6~18, can only contain characters, figures and underscores.</string>
    <string name="error_input_phone">Mobile Phone Number is wrong</string>
    <string name="error_input_sms_authcode">SMS Authentication Code is wrong</string>
    <string name="error_input_realname">Username input is wrong</string>
    <string name="error_input_bodylength">Body Length is not correct</string>
    <string name="error_input_bodyweight">Body Weight is not correct</string>
    <string name="error_input_teaching_experience">Teaching Experience\'s Value incorrect</string>
    <string name="error_input_price">Price\'s Value incorrect</string>

    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_register_newer">New User Register</string>
    <string name="title_sms_authcode">SMS Auth Code</string>
    <string name="title_realname">Real Name</string>
    <string name="title_next_step">Next</string>
    <string name="title_send_sms">Send SMS</string>

    <string name="title_activity_perfect_info">PerfectInfoActivity</string>
    <string name="title_perfect_info">Perfect Info Data</string>

    <string name="title_basic_info">Basic Information</string>
    <string name="title_avatar">Avatar</string>
    <string name="title_gender">Gender</string>
    <string name="title_birthday">Birthday</string>
    <string name="title_city">City</string>

    <string name="title_coach_info">Coach\'s Information</string>
    <string name="title_sport_game">Sport Game</string>
    <string name="title_body_length">Body Length</string>
    <string name="title_body_weight">Body Weight</string>
    <string name="title_teaching_experience">Teaching Experience</string>
    <string name="title_organisation">Organisation</string>
    
    <string name="title_skills">Skills</string>
    
    <string name="title_detailed_introduction">Detailed Introduction</string>

    <string name="unit_length">CM</string>
    <string name="unit_weight">KG</string>
    <string name="unit_time">Years</string>
    <string name="unit_price_everytime">RMB/Times</string>
    <string name="unit_quota_everyday">Times/Day</string>

    <string name="title_submit">Submit</string>
    <string name="title_save">Save</string>

    <string name="title_lovesport_coach">LoveSport For Coach</string>

    <string name="title_last_consultation">Last Consultation</string>

    <string name="left_menu_home_page">Home Page</string>
    <string name="left_menu_my_consultation">My Consultation</string>
    <string name="left_menu_price_settting">Price Setting</string>

    <string name="left_menu_my_photoes">My Photoes</string>
    <string name="left_menu_my_video">My Introduction Video</string>
    <string name="left_menu_teaching_video">My Teaching Video</string>

    <string name="left_menu_more_settings">More Settings</string>

    <string name="title_right_menu">Message Center</string>

    <string name="title_price_online_consultation">Online Consultation Price</string>
    <string name="title_provide_special_offer">Provide Special Offer</string>
    <string name="title_special_offer">Special Offer</string>
    <string name="title_quota_special_offer">Special Offer Quota</string>

    <string name="title_change_passwd">Change Password</string>
    <string name="title_update_info">Update Personal Information</string>
    <string name="title_consultation_welcom_setting">Welcome Hint</string>
    <string name="title_consultation_completed_setting">Complete Hint</string>
    <string name="title_invite_friend">Invite Friends</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_rate_me">Rate This App</string>
    <string name="title_about">About Cool Coach</string>
    <string name="title_logout">Logout</string>
</resources>
