<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="mobi.imuse.lovesports.RegisterActivity"
    >
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:padding="0.0px"
            >

            <!-- 标题文字; -->
            <TextView
                android:id="@+id/tvTitleName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_marginLeft="88dip"
                android:layout_marginRight="88dip"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/title_register_newer"
                android:textColor="@color/icons"
                android:textSize="@dimen/font_size_large"
                />

            <!-- 左箭头 -->
            <ImageView
                android:id="@+id/tvTitleArrowBtnLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@drawable/ic_arrow_left"
                android:contentDescription="@null"
                />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/llInputInformations"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dip"
        android:background="@color/md_white_1000"
        android:divider="@drawable/divider_verital"
        android:orientation="vertical"
        android:paddingLeft="@dimen/edittext_padding"
        android:showDividers="middle"
        >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/activity_padding"
                android:paddingBottom="@dimen/activity_padding"
                android:paddingRight="@dimen/activity_padding"
                android:text="@string/title_mobile_phone"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/font_size_large"
                />

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/editMobilePhone"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:inputType="phone"
                android:maxLength="32"
                android:padding="@dimen/edittext_padding"
                android:singleLine="true"
                android:gravity="right|center_vertical"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/font_size_extra_large"
                app:customRegexp="^(0|86|\\+86)?(13[0-9]|15[012356789]|17[678]|18[0-9]|14[57])[0-9]{8}$"
                app:emptyErrorString="@string/error_input_empty"
                app:testErrorString="@string/error_input_phone"
                app:testType="regexp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/activity_padding"
                android:paddingBottom="@dimen/activity_padding"
                android:paddingRight="@dimen/activity_padding"
                android:text="@string/title_sms_authcode"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/font_size_large"
                />

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/editSmsAuthCode"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:background="@android:color/transparent"
                android:inputType="number"
                android:maxLength="6"
                android:padding="@dimen/edittext_padding"
                android:singleLine="true"
                android:gravity="right|center_vertical"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/font_size_large"
                app:emptyErrorString="@string/error_input_empty"
                app:testErrorString="@string/error_input_sms_authcode"
                app:testType="numeric"
                />
            <Button
                android:id="@+id/btnSendSms"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/title_send_sms"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/llInputInformations"
        android:id="@+id/llUserInformations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dip"
        android:background="@color/md_white_1000"
        android:divider="@drawable/divider_verital"
        android:orientation="vertical"
        android:paddingLeft="@dimen/edittext_padding"
        android:showDividers="middle"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/activity_padding"
                android:paddingBottom="@dimen/activity_padding"
                android:paddingRight="@dimen/activity_padding"
                android:text="@string/title_realname"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/font_size_large"
                />

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/editRealName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:maxLength="32"
                android:padding="@dimen/edittext_padding"
                android:singleLine="true"
                android:gravity="right|center_vertical"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/font_size_large"
                app:emptyErrorString="@string/error_input_empty"
                app:testErrorString="@string/error_input_realname"
                app:testType="personName"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/activity_padding"
                android:paddingBottom="@dimen/activity_padding"
                android:paddingRight="@dimen/activity_padding"
                android:text="@string/title_login_password"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/font_size_large"
                />

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/editLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:maxLength="18"
                android:padding="@dimen/edittext_padding"
                android:singleLine="true"
                android:gravity="right|center_vertical"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/font_size_large"
                app:customRegexp="^[a-zA-Z]\w{5,17}$"
                app:emptyErrorString="@string/error_input_empty"
                app:testErrorString="@string/error_input_password"
                app:testType="regexp"
                />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_below="@id/llUserInformations"
        android:id="@+id/btnNextStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="16dip"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="32dip"
        android:layout_weight="1.0"
        android:background="@drawable/btn_common"
        android:padding="@dimen/activity_padding"
        android:text="@string/title_next_step"
        android:textColor="@color/icons"
        android:textSize="@dimen/font_size_large"
        />

</RelativeLayout>
