<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="?attr/actionBarSize"
              android:orientation="vertical"
              tools:context="mobi.imuse.lovesports.fragment.ServicePriceSettingFragment"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:divider="@drawable/divider_verital"
            android:showDividers="middle"
            >

            <!-- 图文咨询价格; -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dip"
                android:background="@color/md_white_1000"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/edittext_padding"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/edittext_padding"
                    android:paddingTop="@dimen/edittext_padding"
                    android:paddingRight="@dimen/edittext_padding"
                    android:text="@string/title_price_online_consultation"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/font_size_large"
                    />

                <com.andreabaccega.widget.FormEditText
                    android:id="@+id/editPriceOnlineConsultation"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:background="@android:color/transparent"
                    android:gravity="right|center_vertical"
                    android:inputType="number"
                    android:maxLength="4"
                    android:paddingBottom="@dimen/edittext_padding"
                    android:paddingTop="@dimen/edittext_padding"
                    android:singleLine="true"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/font_size_large"
                    app:emptyErrorString="@string/error_input_empty"
                    app:testErrorString="@string/error_input_price"
                    app:testType="numeric"
                    tools:text="160"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="4dip"
                    android:paddingRight="@dimen/edittext_padding"
                    android:singleLine="true"
                    android:text="@string/unit_price_everytime"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/font_size_large"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dip"
                android:background="@color/md_white_1000"
                android:divider="@drawable/divider_verital"
                android:orientation="vertical"
                android:paddingLeft="@dimen/edittext_padding"
                android:showDividers="middle"
                >

                <!-- 是否提供特价咨询 -->
                <RelativeLayout
                    android:id="@+id/rlProvideSpecialOffer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
                    >

                    <CheckBox
                        android:id="@+id/cbProvideSpecialOffer"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dip"
                        android:clickable="false"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingBottom="@dimen/edittext_padding"
                        android:paddingTop="@dimen/edittext_padding"
                        android:text="@string/title_provide_special_offer"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/font_size_large"
                        />

                </RelativeLayout>

                <!-- 特价咨询价格; -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingTop="@dimen/activity_padding"
                        android:paddingBottom="@dimen/activity_padding"
                        android:text="@string/title_special_offer"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/font_size_large"
                        />

                    <com.andreabaccega.widget.FormEditText
                        android:id="@+id/editSpecialOffer"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:background="@android:color/transparent"
                        android:gravity="right|center_vertical"
                        android:inputType="number"
                        android:maxLength="4"
                        android:paddingBottom="@dimen/edittext_padding"
                        android:paddingTop="@dimen/edittext_padding"
                        android:singleLine="true"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/font_size_large"
                        app:emptyErrorString="@string/error_input_empty"
                        app:testErrorString="@string/error_input_price"
                        app:testType="numeric"
                        tools:text="160"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingLeft="4dip"
                        android:paddingRight="@dimen/edittext_padding"
                        android:singleLine="true"
                        android:text="@string/unit_price_everytime"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/font_size_large"
                        />
                </LinearLayout>

                <!-- 特价咨询价格; -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingTop="@dimen/activity_padding"
                        android:paddingBottom="@dimen/activity_padding"
                        android:text="@string/title_quota_special_offer"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/font_size_large"
                        />

                    <com.andreabaccega.widget.FormEditText
                        android:id="@+id/editQuotaSpecialOffer"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:background="@android:color/transparent"
                        android:gravity="right|center_vertical"
                        android:inputType="number"
                        android:maxLength="4"
                        android:paddingBottom="@dimen/edittext_padding"
                        android:paddingTop="@dimen/edittext_padding"
                        android:singleLine="true"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/font_size_large"
                        app:emptyErrorString="@string/error_input_empty"
                        app:testErrorString="@string/error_input_price"
                        app:testType="numeric"
                        tools:text="160"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingLeft="4dip"
                        android:paddingRight="@dimen/edittext_padding"
                        android:singleLine="true"
                        android:text="@string/unit_quota_everyday"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/font_size_large"
                        />
                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="32dip"
                >

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dip"
                    android:layout_marginRight="16dip"
                    android:layout_marginTop="32dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/btn_common"
                    android:padding="@dimen/activity_padding"
                    android:text="@string/title_submit"
                    android:textColor="@color/icons"
                    android:textSize="@dimen/font_size_large"
                    />

            </FrameLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
